GNOME Bugzilla – Bug 725477
Fix a typo
Last modified: 2019-02-22 11:59:09 UTC
These variables are not used for anything, so it probably doesn't make a difference, but they should be reset to FALSE when the name is lost.
Created attachment 270667 [details] [review] Fix a typo
Attachment 270667 [details] pushed as bab337a - Fix a typo Thanks!