Fix a typo

These variables are not used for anything, so it probably
doesn't make a difference, but they should be reset to FALSE
when the name is lost.

https://bugzilla.gnome.org/show_bug.cgi?id=725477